<resources>
    <string name="app_name">NBill1</string>
    <string name="add_button_text">Add</string>
    <string name="income_text">Income</string>
    <string name="income_textbox">15000</string>
    <string name="spent_text">Spent</string>
    <string name="spent_textbox">180000</string>
    <string name="remained_text">Remained</string>
    <string name="remained_textbox">19625</string>
    <string name="income_vs_spent_text">Income vs Spent</string>
    <string name="tags_chart_btn_text">Tags chart</string>
    <string name="tags_btn_text">Tags</string>
    <string name="income_spent_chart_button">Income VS Spent</string>
    <string name="settings">Settings</string>
    <string name="ocr_scan">OCR</string>
    <string name="add_top_text">Add your value</string>
    <string name="tags_page_text_s">Here are your Tags!</string>
    <string name="add_tag_btn_tag_page">Add</string>
    <string name="source_of_income_txt">Source of income...</string>
    <string name="week_starts_on_btn">Week starts on...</string>
    <string name="title_activity_week_starts_on">WeekStartsOn</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="week_starts_on_txt">Week starts on...</string>

    <string-array name="incomeSPENT">
        <item>Income</item>
        <item>Spent</item>
    </string-array>


</resources>
